--- a/google-place-backend/src/main/resources/application.properties
+++ b/google-place-backend/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port = 8070
+
+spring.datasource.url=jdbc:mysql://localhost:3306/googleplaceapi?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+
+google.api.key =
 
