--- a/google-place-backend/src/main/resources/application.properties
+++ b/google-place-backend/src/main/resources/application.properties
@@ -6,5 +6,6 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
-google.api.key =
+google.api.key = my_api_key
+
 
